[package]
name = "rusty-loc-sim"
version = "1.0.0"
edition = "2021"

[features]
debug_errors = []

[dependencies]

byteorder = "1.5.0"
hex = "0.4.3"
plist = "1.7.0"
pretty-hex = "0.4.1"
rustls = "0.23.25"
rustls-pki-types = "1.11.0"
serde =  { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
log = "0.4"
tokio = { version = "1.43.0", features = ["full"] }
tokio-rustls = "0.26.2"
util_macro ={ path = "../phantom-trail-app/phantom-trail/util_macro"}
wintun = "0.5.1"
